sample/sample-app-ingress.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: myopsmanager
  labels:
    app: myopsmanager
spec:
  # tls:
  # - hosts: 
  #   - kubernetes.thatapp.io
  #   secretName: blog-tls-prod
   

  rules:
    - host: cloud.kubernetes.thatapp.io
      http:
        paths:
          - path: /
            backend:
              serviceName: myopsmanager-svc-ext
              servicePort: 8080
              
    # - host: indiana.kubernetes.jefftutors.com
    #   http:
    #     paths:
    #       - path: /
    #         backend:
    #           serviceName: blog
    #           servicePort: 80
            


# helm template \
#   --set operator.env=prod \
#   --set namespace=mongodb \
#   helm_chart > operator.yaml
